# drone-gcs-poc

./: .gitignore  README.md  docker-compose.yaml  gen_compose.py  pyproject.toml  server.py
.claude/: launch.json
server/: .dockerignore  Dockerfile  pyproject.toml  server.py  telemetry.py
server/tests/: test_server.py
web/: .env.example  Dockerfile  docker-entrypoint-cesium.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/public/: config.js
web/src/: App.css  App.tsx  index.css
web/src/components/: ControlPanel.tsx  DroneViewer.tsx  Hud.tsx  Messages.tsx  Sidebar.tsx  Toaster.tsx
web/src/hooks/: useKeyboardControl.ts  useTelemetry.ts
web/src/lib/: api.ts  droneIcon.ts  route.test.ts  route.ts  store.test.ts  store.ts
